[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/TerrainManager.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/Used/Music/Forboding/Dungeon 1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=5]
[ext_resource path="res://Assets/Environment/Water/TutorialWater.tres" type="Material" id=6]
[ext_resource path="res://Scripts/WaterPlane.gd" type="Script" id=7]
[ext_resource path="res://Assets/Environment/Water/Ocean.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Scripts/KaijuManager.gd" type="Script" id=9]
[ext_resource path="res://Scripts/BuildingManager.gd" type="Script" id=10]
[ext_resource path="res://Building/High-Rise/BuildingMesh.tres" type="CubeMesh" id=13]
[ext_resource path="res://Building/BuildingCreator.gd" type="Script" id=14]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 500, 40, 500 )

[sub_resource type="ProceduralSky" id=6]
sky_top_color = Color( 0.184314, 0.235294, 0.262745, 1 )
sky_horizon_color = Color( 0.184314, 0.235294, 0.262745, 1 )
ground_bottom_color = Color( 0.184314, 0.235294, 0.262745, 1 )
ground_horizon_color = Color( 0.184314, 0.235294, 0.262745, 1 )
texture_size = 0

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 6 )
ambient_light_color = Color( 0.403922, 0.403922, 0.403922, 1 )
fog_enabled = true
fog_color = Color( 0.184314, 0.235294, 0.262745, 1 )
fog_sun_amount = 1.0
fog_depth_begin = 100.0
fog_depth_end = 200.0
fog_depth_curve = 1.5
fog_transmit_enabled = true
fog_transmit_curve = 0.535887
fog_height_min = 30.0
fog_height_max = 1000.0
fog_height_curve = 1.7411
adjustment_enabled = true
adjustment_brightness = 0.8
adjustment_contrast = 1.1
adjustment_saturation = 1.2

[sub_resource type="MultiMesh" id=7]
transform_format = 1
custom_data_format = 2
mesh = ExtResource( 13 )

[node name="Root" type="Spatial"]

[node name="WaterMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0542879, 30, 0.00340462 )
visible = false
portal_mode = 4
material_override = ExtResource( 6 )
mesh = ExtResource( 8 )
script = ExtResource( 7 )

[node name="WaterArea" type="Area" parent="WaterMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -40, 0 )
collision_layer = 3
collision_mask = 3
monitorable = false
space_override = 3
linear_damp = 1.5
angular_damp = 1.5
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape" type="CollisionShape" parent="WaterMesh/WaterArea"]
shape = SubResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 200, 0 )
continuous_cd = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="GameManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="KaijuManager" type="Node" parent="GameManager"]
script = ExtResource( 9 )

[node name="BuildingManager" type="Node" parent="GameManager"]
script = ExtResource( 10 )

[node name="BuildingMultiMesh" type="MultiMeshInstance" parent="GameManager/BuildingManager"]
multimesh = SubResource( 7 )
script = ExtResource( 14 )

[node name="TerrainManager" type="Node" parent="GameManager"]
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.806372, 0.591408, 0, -0.591408, -0.806372, 0, 0, 0 )
light_energy = 0.25
directional_shadow_mode = 0

[connection signal="body_shape_entered" from="WaterMesh/WaterArea" to="WaterMesh" method="_on_Area_body_shape_entered"]
[connection signal="body_shape_exited" from="WaterMesh/WaterArea" to="WaterMesh" method="_on_Area_body_shape_entered"]
